# solana-spinWheel

frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  declaration.d.ts  index.css
frontend/src/Components/Banner/: Banner.css  Banner.js
frontend/src/Components/Footer/: Footer.css  Footer.js
frontend/src/Components/Loader/: Loader.css  Loader.js
frontend/src/Components/Navbar/: ConnectToPhantom.tsx  Navbar.css  Navbar.js
frontend/src/Components/Slider/: Slider.css  Slider.js  Slider2.js  SliderData.js
frontend/src/assets/: open.mpeg  running.mpeg
frontend/src/contexts/: IPFSUTils.js  constants.ts  helpers.ts  keys.ts  processMetaplexAccounts.ts  utils.js
frontend/src/contexts/anchor_idl/idl/: spin.json
frontend/src/screens/admin/: Admin.js  admin.css
frontend/src/utils/: Util.js
solana-capital-spin/: Anchor.toml
solana-capital-spin/programs/spin/: Cargo.toml
solana-capital-spin/programs/spin/src/: account.rs  constants.rs  errors.rs  lib.rs  utils.rs
solana-capital-spin/tests/: spin.ts
